[+] Unit testing, [+] Integration testing
