# backend/src/generated/swagger.json
@@ -1466,10 +1466,9 @@
 			"JobName": {
 				"type": "string",
 				"enum": [
-					"quota_reset",
-					"restriction_expire",
 					"comic_rebuild"
-				]
+				],
+				"nullable": false
 			},
 			"JobsListResponseDTO": {
 				"properties": {
